--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<h1> hello, world! </h1>
+<!DOCTYPE html>
+<html>
+  <head>
+  <meta charset="utf-8">
+  </head>
+<body>
+  <h1> hello, world! </h1>
+  <p> hmmm, nothing more here now then.</p>
+</body>
