--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   </head>
 <body>
-  <h1> hello, world! </h1>
+  <h1> Hello, world! </h1>
   <p> hmmm, nothing more here now then.</p>
+  <p> But I will soon update. :)
 </body>
